# Noctua

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml  zero2_gpt3.yaml
scripts/: launch.sh  slurm_example.sh  train.py
src/noctua/: __init__.py
src/noctua/core/: __init__.py  communication.py  config.py  model_wrapper.py  trainer.py
src/noctua/optimizers/: __init__.py  adamw.py  zero.py
src/noctua/parallel/: __init__.py  dataparallel.py  pipeline.py  tensor_parallel.py
src/noctua/utils/: __init__.py  checkpoint.py  data.py  logging.py  metrics.py
tests/: __init__.py  test_config.py  test_metrics.py  test_optimizers.py  test_parallel.py
